[metadata]
name = relic-tool
version = 1.0.0

author = Marcus Kertesz
; author_email = author@example.com

description = A library which allows the reading/writing of Relic's proprietary file formats; SGA files (.sga), Relic Chunky files, and UCS language files (.ucs).
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/ModernMAK/Relic-Tool

project_urls =
    Bug Tracker = https://github.com/ModernMAK/Relic-Game-Tool/issues

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

install_requires =
    relic-tool-sga
    relic-tool-chunky
    relic-tool-ucs